2011-05-19  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        JoinTextNodesCommand is never used
        https://bugs.webkit.org/show_bug.cgi?id=61089

        Deleted JoinTextNodesCommand because it's never used.

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * editing/CompositeEditCommand.cpp:
        * editing/CompositeEditCommand.h:
        * editing/EditingAllInOne.cpp:
        * editing/JoinTextNodesCommand.cpp: Removed.
        * editing/JoinTextNodesCommand.h: Removed.

Canonical link: https://commits.webkit.org/76495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86854 268f45cc-cd09-0410-ab3c-d52691b4dbfc